@@ -109,6 +109,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 1423) LanguageJa.php update
 * Clean up duplicate code for selection of changeslist style
 * (bug 3475) anon contrib links on Special:Newpages
+* Correct blob caching to reduce redundant blob loads on backups
 
 
 === Caveats ===
